// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 expenses correctly 1`] = `<p />`;

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<p>
  Viewing 
  3
   expenses totalling 
  $1,141.95
</p>
`;

exports[`should render ExpensesSummary with single expense correctly 1`] = `
<p>
  Viewing 
  1
   expenses totalling 
  $45.00
</p>
`;
